<resources>

    <string name="app_name">FancyQuartett</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="change_content_layout">Change Content Layout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Toolbar Actions -->
    <string name="action_rules">Rules</string>

    <string name="action_settings">Settings</string>

    <!-- Tab Title -->
    <string name="gallery">Gallery</string>
    <string name="statistic">Statistic</string>
    <string name="start">Start</string>

    <!-- Buttons -->
    <string name="start_caps">START</string>
    <string name="ok_caps">OK</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="close_caps">CLOSE</string>
    <string name="exit_caps">EXIT</string>
    <string name="no_caps">NO</string>
    <string name="yes_caps">YES</string>
    <string name="pause_game_caps">PAUSE GAME</string>

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="startgame">Start</string>

    <!-- Dialogues -->
    <string name="downloadalertdialogtitle">Please download first</string>
    <string name="downloadbeforeuseonlinedeck">You have do Download the Deck before using it!</string>
    <string name="downloadandsavedialogtext">Do you want to Download and save the Deck locally?</string>
    <string name="downloaddialogtitle">Download Deck?</string>
    <string name="kiplaysdialogtitle">... is playing!</string>
    <string name="kiplaysdialogtext">Please wait...</string>
    <string name="pausecurrentgamedialogtitle">Pause game</string>
    <string name="pausecurrentgamedialogtext">Are you sure you want to pause the game? This game will be saved automatically.</string>
    <string name="randomsettingsdialogtitle">Random setting</string>
    <string name="randomsettingsdialogtext">You shaked your device. All game-settings were randomly overwritte.</string>

    <!-- Toasts -->
    <string name="noDeckSelectedForGame">You have to choose a Deck to start the Game!</string>
    <string name="noLocalDecksFound">No Local decks were found on the phone!</string>
    <string name="noOnlineDecksFound">No Online Decks were Found on the Server</string>
    <string name="randomsettingstoast">Shake your device to select random settings.</string>

    <!-- List Items -->
    <string name="delete">Delete Deck</string>
    <string name="delete_deck">Delete Deck</string>

    <!-- Bundle Keys -->
    <!-- TODO: create Bundle Key values -->

    <!-- Preference Keys -->
    <string name="statisticSharedPreferencesKey">stats</string>
    <string name="statisticNumSingleplayerGamesPlayedKey">numSingleplayerGamesPlayed</string>
    <string name="statisticNumSingleplayerGamesWonKey">numSingleplayerGamesWon</string>
    <string name="statisticNumSingleplayerGamesLostKey">numSingleplayerGamesLost</string>
    <string name="statisticSingleplayerGamesWinningPercentageKey">singleplayerWinningPercentage</string>
    <string name="statisticNumSingleplayerDuelsMadeKey">numSingleplayerDuelsMade</string>
    <string name="statisticNumSingleplayerDuelsWonKey">numSingleplayerDuelsWon</string>
    <string name="statisticNumSingleplayerDuelsLostKey">numSingleplayerDuelsLost</string>
    <string name="statisticSingleplayerDuelsWinningPercentageKey">singleplayerDuelsWinningPercentage</string>

    <string name="statisticNumMultiplayerGamesPlayedKey">numMultiplayerGamesPlayed</string>
    <string name="statisticNumMultiplayerGamesWonKey">numMultiplayerGamesWon</string>
    <string name="statisticNumMultiplayerGamesLostKey">numMultiplayerGamesLost</string>
    <string name="statisticMultiplayerGamesWinningPercentageKey">multiplayerWinningPercentage</string>
    <string name="statisticNumMultiplayerDuelsMadeKey">numMultiplayerDuelsMade</string>
    <string name="statisticNumMultiplayerDuelsWonKey">numMultiplayerDuelsWon</string>
    <string name="statisticNumMultiplayerDuelsLostKey">numMultiplayerDuelsLost</string>
    <string name="statisticMultiplayerDuelsWinningPercentageKey">multiplayerDuelsWinningPercentage</string>

    <!-- New Game Settings -->
        <!-- Titles -->
        <string name="newSinglePlayer">New Singleplayer</string>
        <string name="newMultiPlayer">New Multiplayer</string>
        <!-- Game Modes -->
        <string name="totheend">To the End</string>
        <string name="time">Time</string>
        <string name="points">Points</string>
        <string name="hotseat">Hotseat</string>
        <!-- Fragment Titles -->
        <string name="gamemode_chooser_title">Game Mode</string>
        <string name="generalsettings_title">General Settings</string>
        <string name="chosendeck">Chosen Deck</string>
        <!-- Others -->
        <string name="numberofroundstext">Rounds at maximum</string>
        <string name="totheenddescription">You play until one player has won all cards</string>
        <string name="timeinminuitesdescription">Minutes maximum for one Game</string>
        <string name="pointdescription">Points for one Player to win</string>
        <string name="gamesettings_timeoutforoneround_switch"> Seconds for Timeout of one Round</string>
        <string name="hardai">hard AI level</string>
        <string name="mediumai">medium AI level</string>
        <string name="softai">soft AI level</string>
        <string name="playername1">Player1</string>
        <string name="playername2">Player2</string>




    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="serveradress">Serveraddress</string>
    <string name="pref_default_display_serveraddress">Enter Serveraddress here</string>
    <string name="downloadProgressText">Deck is downloading, please wait!</string>
    <string name="canceledDownload">Canceled Download</string>
    <string name="noDescriptionAvailabe">No Description available for this Card</string>



    <string name="downloaded">Successfully downloaded!</string>
    <string name="deckdeleted">Successfully deleted!</string>
    <string name="deleteSavedAlert">You have a saved Game for this Deck. You loose the saved Game when deleting the Deck.</string>
    <string name="deleteWarningTitle">Warning, there is a saved Game</string>
    <string name="last_played_on">Last played on</string>
    <string name="ki_level">AI Level</string>

    <!-- Toolbar Title -->
    <string name="title_activity_deck_gallery">DeckGalleryActivity</string>
    <string name="title_activity_card_detail_viewer">CardDetailViewerActivity</string>

    <string name="title_main">FancyQuartett</string>
    <string name="title_new_game">New Game</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_settings">Settings</string>
    <string name="title_gallery_select">Select a deck</string>

    <!-- GameActivity -->
    <string name="balance">Balance</string>
    <string name="time_left">Time left:</string>
    <string name="round">Round:</string>

    <!-- GameEngine -->
    <string name="p1_name_singleplayer">You</string>
    <string name="p2_name_singleplayer">KI</string>
    <string name="current_player">Current player:</string>

    <!-- GameEndDialog -->
    <string name="winner_gameend">WINNER&#58;</string>

    <!-- RoundEndDialog -->
    <string name="winner">WINNER</string>
    <string name="loser">LOSER</string>
    <string name="standoff">STANDOFF</string>
    <string name="medianis">Median is:</string>

    <!-- PlayerChangedDialog -->
    <string name="player_changed">Player changed</string>
    <string name="nolastGame">No last game found</string>
    <string name="touchtoselectadeck">Touch to select a deck.</string>
    <string name="nodeckselected">No deck selected ...</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="newMagicMode">View  AI-Players</string>
    <string name="deleteSavedGameQuestion">Do you really want to delete your saved Game?</string>
    <string name="savedGameDeleted">Saved Game has been deleted</string>
    <string name="deleteTitle">Delete?</string>


</resources>
