<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/downloadDeckMenuItem"
        android:orderInCategory="99"
        android:title="@string/download"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/deleteDeckMenuItem"
        android:orderInCategory="100"
        android:title="@string/delete_deck"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/startNewSinglePlayer"
        android:orderInCategory="98"
        android:title="@string/newSinglePlayer"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/startNewMultiPlayer"
        android:orderInCategory="98"
        android:title="@string/newMultiPlayer"
        android:visible="false"
        app:showAsAction="never" />

</menu>