<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_game_settings_framecontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="layout.NewGameSettingsFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/chosendecktitle"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/chosendeck"
                        android:textSize="14sp" />

                    <include
                        android:id="@+id/chosendecktitem"
                        layout="@layout/newgamesettingsdeckitem" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/gamemodechoosertitle"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/gamemode_chooser_title"
                        android:textSize="14sp" />

                    <android.support.design.widget.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/primary"
                        app:tabSelectedTextColor="@android:color/white"
                        app:tabTextColor="@color/grey" />

                    <android.support.v4.view.ViewPager
                        android:id="@+id/container"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/generalsettingstitle"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/generalsettings_title"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:id="@+id/multiplayerFragmentContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/maximumroundsedittext"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:enabled="false"
                            android:gravity="center_horizontal"
                            android:inputType="numberSigned"
                            android:nextFocusForward="@id/new_game_settings_framecontainer"
                            android:numeric="integer"
                            android:selectAllOnFocus="true"
                            android:text="20" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/numberofrounds_switch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/numberofroundstext" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/timoutsecondedittext"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:enabled="false"
                            android:gravity="center_horizontal"
                            android:inputType="numberSigned"
                            android:nextFocusForward="@id/new_game_settings_framecontainer"
                            android:numeric="integer"
                            android:selectAllOnFocus="true"
                            android:text="20" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/timeout_switch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="end|top"
                            android:checked="false"
                            android:text="@string/gamesettings_timeoutforoneround_switch" />


                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/aibuttongroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/softai" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mediumai" />

                        <RadioButton
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hardai" />
                    </RadioGroup>


                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
